Fix license display on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -113,6 +113,8 @@ html, body
 {
     .license
     {
-        font-size: 1vw;
+        width: 100%;
+        height: 200px;
+        font-size: 2vw;
     }
 }
